# clinicalpathwaycompare

./: pyproject.toml  requirements.txt  test_object_parser.py
.venv311/: pyvenv.cfg
data/outputs/ucsf_asthma/: parsed_objects.json
examples/: parse_objects_example.py
notebooks/: exploratory_analysis.ipynb
pathway_compare/: .gitignore  ARCHITECTURE.md  README.md  requirements.txt
pathway_compare/src/pathway_compare/: __init__.py  config.py
pathway_compare/src/pathway_compare/comparison/: __init__.py  concept_diff.py  generate_summary.py
pathway_compare/src/pathway_compare/language_normalizer/: __init__.py  threshold_parser.py
pathway_compare/src/pathway_compare/pipeline/: compare_pathways.py
pathway_compare/src/pathway_compare/screenshotter/: __init__.py  capture_pdf.py  manifest.py
pathway_compare/tests/: test_placeholder.py
src/pathway_compare/comparison/: graph_diff.py
src/pathway_compare/language_normalizer/: llm_mapping.py  normalize_nodes.py
src/pathway_compare/object_parser/: __init__.py  detect_arrows.py  detect_shapes.py  detect_text_blocks.py  run_object_parser.py
src/pathway_compare/pipeline/: __init__.py  run_pipeline.py
src/pathway_compare/screenshotter/: capture_webpage.py
src/pathway_compare/tree_extractor/: __init__.py  infer_node_types.py
src/pathway_compare/types/: detected_object.py  pathway_graph.py
src/pathway_compare/utils/: __init__.py
src/pathway_object_parser/: __init__.py  detect_lines.py  detect_shapes.py  models.py  object_parser.py  ocr.py  pdf_utils.py  visualize.py
(+7 files in other folders)
