[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathway-compare"
version = "0.1.0"
description = "Clinical pathway parsing and comparison research scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Clinical Pathway Parsing Project" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
